type; it will also include the code chunks that are reused frequently in other functions.
- added UseTemplate() to make use of the template files faster. Not intended for wide use at this stage.
- Moved installr package from Imports to Suggests so that installation from GitHub works for OS!=Windows.
- removed use of require(<pkg>) and used requireNamespace("<pkg>") instead, and then used pkg::blah()

# v0.25.2
- fixed formatting of the R functions so it is easier to read. Request from Henrik Bengtsson resolved using the rfmt package seen at UseR!2016


# v0.25.1
- added SpellCheck() which is an interface to spell check a set of files, allowing ignore this time, always for all files, always for this file, replacement, and reading the word in context.
- added CleanCSV() for removing white space in (csv) files
- moved files from Inst to Inst/MyBrailleR for cleaner package installation. updated installation functions as needed.
- added AutoSpellCheck() for fixing all my irritating typos. 
- added AutoSpellList.csv for my list of typos to fix. Users can update this for themselves.
- added FindReplace() for replacing text strings in a specified file.
- added SpellCheckFiles() which is a wrapper for spell checking a file or files in a folder; this returns a list with the classed set to "wordlist" which has an associated print method. (based on similar functionality in the devtools package)
- added package hunspell to the growing list of dependencies
- fixed spelling in vignettes using SpellCheckFiles()
- added local and global options for lists of words to ignore during spell checking.

# v0.25.0
- did some overdue spell checking
- fixed wrong filename in PrepareWriteR() and its help page.