@@ -22,7 +22,7 @@ FindReplace =
             NoLines = NoLines - 1
           }
         }
-        writeLines(gsub(find, replace, OldText)[1:NoLines], con = file)
+        writeLines(gsub(find, replace, OldText, fixed=TRUE)[1:NoLines], con = file)
       } else {
         warning(
             "The specified file does not exist.\nNo action has been taken.\n")
